--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,4 +17,19 @@
     <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
         <item name="boxStrokeColor">#fff</item>
     </style>
+
+    <style name="MyTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <!-- border color -->
+        <item name="boxStrokeColor">@color/text_input_layout_stroke_color</item>
+
+<!--        &lt;!&ndash; The color of the label when it is collapsed and the text field is active &ndash;&gt;-->
+<!--        <item name="hintTextColor">@color/....</item>-->
+<!--        &lt;!&ndash; The color of the label in all other text field states (such as resting and disabled) &ndash;&gt;-->
+<!--        <item name="android:textColorHint">@color/.....</item>-->
+    </style>
+
+    <style name="MyTextInputLayout_overlay">
+        <item name="colorOnSurface">@color/light_blue</item>
+        <item name="colorPrimary">@color/light_blue</item>
+    </style>
 </resources>
