Perbaikan klasifikasi data

--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -511,7 +511,7 @@
                                 android:layout_weight="1"
                                 android:gravity="end"
                                 android:layout_height="wrap_content"
-                                android:text=""/>
+                                android:text="-"/>
 
                         </LinearLayout>
 
