--- a/app/src/main/res/layout/activity_proses.xml
+++ b/app/src/main/res/layout/activity_proses.xml
@@ -4,75 +4,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_blue"
     android:paddingStart="24dp"
     android:paddingEnd="24dp"
     tools:context=".ProsesActivity">
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="125dp"
-        android:orientation="horizontal"
-        android:weightSum="9"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+<!--    <LinearLayout-->
+<!--        android:id="@+id/linearLayout2"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="125dp"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:weightSum="9"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="2"
-            android:text="Frekuensi\nMP-ASI"
-            android:textColor="@color/white" />
+<!--        <TextView-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_weight="2"-->
+<!--            android:text="Frekuensi\nMP-ASI"-->
+<!--            android:textColor="@color/white" />-->
 
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="5"
-            app:strokeColor="@color/white"
-            app:strokeWidth="1dp"
-            app:cardCornerRadius="8dp"
-            android:backgroundTint="@android:color/transparent">
-
-            <com.jaredrummler.materialspinner.MaterialSpinner
-                android:id="@+id/spinner"
-                app:ms_hint="Pilih Frekuensi"
-                app:ms_hint_color="@color/white"
-                android:layout_width="match_parent"
-                app:ms_text_color="@color/white"
-                app:ms_background_color="@color/light_blue"
-                app:ms_arrow_tint="@color/white"
-                android:layout_height="wrap_content"/>
-        </com.google.android.material.card.MaterialCardView>
-
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:id="@+id/il_frekuensi"-->
-<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
+<!--        <com.google.android.material.card.MaterialCardView-->
 <!--            android:layout_width="0dp"-->
 <!--            android:layout_height="wrap_content"-->
 <!--            android:layout_weight="5"-->
-<!--            app:boxStrokeColor="@color/text_input_layout_stroke_color">-->
+<!--            app:strokeColor="@color/white"-->
+<!--            app:strokeWidth="1dp"-->
+<!--            app:cardCornerRadius="8dp"-->
+<!--            android:backgroundTint="@android:color/transparent">-->
 
-<!--            <com.google.android.material.textfield.TextInputEditText-->
-<!--                android:id="@+id/et_frekuensi"-->
+<!--            <com.jaredrummler.materialspinner.MaterialSpinner-->
+<!--                android:id="@+id/spinner"-->
+<!--                app:ms_hint="Pilih Frekuensi"-->
+<!--                app:ms_hint_color="@color/white"-->
 <!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:inputType="number"-->
-<!--                android:maxLength="16" />-->
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
+<!--                app:ms_text_color="@color/white"-->
+<!--                app:ms_background_color="@color/light_blue"-->
+<!--                app:ms_arrow_tint="@color/white"-->
+<!--                android:layout_height="wrap_content"/>-->
+<!--        </com.google.android.material.card.MaterialCardView>-->
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="2"
-            android:gravity="end"
-            android:text="/Hari"
-            android:textColor="@color/white" />
-    </LinearLayout>
+<!--&lt;!&ndash;        <com.google.android.material.textfield.TextInputLayout&ndash;&gt;-->
+<!--&lt;!&ndash;            android:id="@+id/il_frekuensi"&ndash;&gt;-->
+<!--&lt;!&ndash;            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_width="0dp"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_weight="5"&ndash;&gt;-->
+<!--&lt;!&ndash;            app:boxStrokeColor="@color/text_input_layout_stroke_color">&ndash;&gt;-->
+
+<!--&lt;!&ndash;            <com.google.android.material.textfield.TextInputEditText&ndash;&gt;-->
+<!--&lt;!&ndash;                android:id="@+id/et_frekuensi"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:layout_width="match_parent"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:inputType="number"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:maxLength="16" />&ndash;&gt;-->
+<!--&lt;!&ndash;        </com.google.android.material.textfield.TextInputLayout>&ndash;&gt;-->
+
+<!--        <TextView-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_weight="2"-->
+<!--            android:gravity="end"-->
+<!--            android:text="/Hari"-->
+<!--            android:textColor="@color/white" />-->
+<!--    </LinearLayout>-->
 
     <LinearLayout
         android:id="@+id/linearLayout3"
@@ -81,19 +80,16 @@
         android:layout_marginTop="36dp"
         android:orientation="horizontal"
         android:weightSum="8"
-        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center|top"
-            android:layout_marginTop="12dp"
             android:layout_weight="2"
-            android:text="Jenis\nMP-ASI"
-            android:textColor="@color/white" />
+            android:text="Jenis\nMP-ASI"/>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -104,8 +100,7 @@
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:strokeColor="@color/white"
-                app:strokeWidth="1dp"
+
                 app:cardCornerRadius="8dp"
                 android:backgroundTint="@android:color/transparent">
 
@@ -120,8 +115,27 @@
                     android:layout_height="wrap_content"/>
             </com.google.android.material.card.MaterialCardView>
 
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:strokeColor="@color/light_blue"
+                app:strokeWidth="1dp"
+                android:layout_marginTop="12dp"
+                app:cardCornerRadius="8dp"
+                android:backgroundTint="@android:color/transparent">
 
-<!--            <com.google.android.material.textfield.TextInputLayout-->
+                <com.jaredrummler.materialspinner.MaterialSpinner
+                    android:id="@+id/et_subjenis1"
+                    android:layout_width="match_parent"
+                    app:ms_hint="Pilih Jenis MP-ASI"
+                    android:textSize="12sp"
+                    app:ms_arrow_tint="@color/light_blue"
+                    android:layout_height="wrap_content"/>
+            </com.google.android.material.card.MaterialCardView>
+
+
+
+            <!--            <com.google.android.material.textfield.TextInputLayout-->
 <!--                android:id="@+id/il_jenis"-->
 <!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
 <!--                android:layout_width="match_parent"-->
@@ -153,8 +167,7 @@
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:strokeColor="@color/white"
-                app:strokeWidth="1dp"
+
                 android:layout_marginTop="24dp"
                 app:cardCornerRadius="8dp"
                 android:backgroundTint="@android:color/transparent">
@@ -173,8 +186,26 @@
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:strokeColor="@color/white"
+                app:strokeColor="@color/light_blue"
                 app:strokeWidth="1dp"
+                android:layout_marginTop="12dp"
+                app:cardCornerRadius="8dp"
+                android:backgroundTint="@android:color/transparent">
+
+                <com.jaredrummler.materialspinner.MaterialSpinner
+                    android:id="@+id/et_subjenis2"
+                    android:layout_width="match_parent"
+                    app:ms_hint="Pilih Jenis MP-ASI"
+                    android:textSize="12sp"
+                    app:ms_arrow_tint="@color/light_blue"
+                    android:layout_height="wrap_content"/>
+            </com.google.android.material.card.MaterialCardView>
+
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
                 android:layout_marginTop="24dp"
                 app:cardCornerRadius="8dp"
                 android:backgroundTint="@android:color/transparent">
@@ -191,11 +222,29 @@
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:strokeColor="@color/light_blue"
+                app:strokeWidth="1dp"
+                android:layout_marginTop="12dp"
+                app:cardCornerRadius="8dp"
+                android:backgroundTint="@android:color/transparent">
+
+                <com.jaredrummler.materialspinner.MaterialSpinner
+                    android:id="@+id/et_subjenis3"
+                    android:layout_width="match_parent"
+                    app:ms_hint="Pilih Jenis MP-ASI"
+                    android:textSize="12sp"
+                    app:ms_arrow_tint="@color/light_blue"
+                    android:layout_height="wrap_content"/>
+            </com.google.android.material.card.MaterialCardView>
+
+
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/mc_jenis4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:strokeColor="@color/white"
-                app:strokeWidth="1dp"
+
                 android:layout_marginTop="24dp"
                 app:cardCornerRadius="8dp"
                 android:visibility="gone"
@@ -211,6 +260,26 @@
                     app:ms_text_color="@color/white"
                     android:layout_height="wrap_content"/>
             </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:strokeColor="@color/light_blue"
+                app:strokeWidth="1dp"
+                android:visibility="gone"
+                android:layout_marginTop="12dp"
+                app:cardCornerRadius="8dp"
+                android:backgroundTint="@android:color/transparent">
+
+                <com.jaredrummler.materialspinner.MaterialSpinner
+                    android:id="@+id/et_subjenis4"
+                    android:layout_width="match_parent"
+                    app:ms_hint="Pilih Jenis MP-ASI"
+                    android:textSize="12sp"
+                    app:ms_arrow_tint="@color/light_blue"
+                    android:layout_height="wrap_content"/>
+            </com.google.android.material.card.MaterialCardView>
+
 
             <!--            <com.google.android.material.card.MaterialCardView-->
 <!--                android:layout_width="match_parent"-->
