--- a/app/src/main/res/layout/activity_proses.xml
+++ b/app/src/main/res/layout/activity_proses.xml
@@ -84,12 +84,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|top"
             android:layout_weight="2"
-            android:text="Jenis\nMP-ASI"/>
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|top"
+                android:text="Frekuensi\nMP-ASI"/>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:text="Jenis\nMP-ASI"/>
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="0dp"
@@ -100,7 +113,23 @@
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cardCornerRadius="8dp"
+                app:strokeWidth="1dp"
+                app:strokeColor="@color/light_blue">
 
+                <com.jaredrummler.materialspinner.MaterialSpinner
+                    android:id="@+id/et_frekuensi"
+                    android:layout_width="match_parent"
+                    app:ms_hint="Pilih Frekuensi MP-ASI"
+                    app:ms_arrow_tint="@color/light_blue"
+                    android:layout_height="wrap_content"/>
+            </com.google.android.material.card.MaterialCardView>
+
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
                 app:cardCornerRadius="8dp"
                 android:backgroundTint="@android:color/transparent">
 
