--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -459,7 +459,7 @@
                                 android:layout_weight="1"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="MP-ASI 1"/>
+                                android:text="Karbohidrat"/>
 
                             <TextView
                                 android:id="@+id/tv_mp_asi1"
@@ -481,7 +481,7 @@
                                 android:layout_weight="1"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="MP-ASI 2"/>
+                                android:text="Protein Hewani"/>
 
                             <TextView
                                 android:id="@+id/tv_mp_asi2"
@@ -503,7 +503,7 @@
                                 android:layout_weight="1"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="MP-ASI 3"/>
+                                android:text="Protein Nabati"/>
 
                             <TextView
                                 android:id="@+id/tv_mp_asi3"
@@ -525,7 +525,7 @@
                                 android:layout_weight="1"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="MP-ASI 4"/>
+                                android:text="Lemak"/>
 
                             <TextView
                                 android:id="@+id/tv_mp_asi4"
@@ -536,6 +536,51 @@
                                 android:text="-"/>
 
                         </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginTop="12dp"
+                            android:weightSum="2">
+                            <TextView
+                                android:layout_weight="1"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:text="Sayuran"/>
+
+                            <TextView
+                                android:id="@+id/tv_mp_asi5"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:gravity="end"
+                                android:layout_height="wrap_content"
+                                android:text="-"/>
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginTop="12dp"
+                            android:weightSum="2">
+                            <TextView
+                                android:layout_weight="1"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:text="Buah-buahan"/>
+
+                            <TextView
+                                android:id="@+id/tv_mp_asi6"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:gravity="end"
+                                android:layout_height="wrap_content"
+                                android:text="-"/>
+
+                        </LinearLayout>
+
 
                         <LinearLayout
                             android:layout_width="match_parent"
